crates/cli/tests/snapshots/hash_test__hash__prints_the_manifest.snap
---
source: crates/cli/tests/hash_test.rs
expression: assert.output()
---

Hash: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

{
  "command": "base",
  "args": [
    "a",
    "b",
    "c"
  ]
}
