crates/cli/tests/snapshots/hash_test__hash__prints_the_manifest_in_json.snap
---
source: crates/cli/tests/hash_test.rs
expression: assert.output()
---
{
  "command": "base",
  "args": [
    "a",
    "b",
    "c"
  ]
}
